<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

        <TextView android:text="@string/action_settings" android:id="@+id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
        <CheckBox android:layout_width="wrap_content" android:text="@string/alien_alert" android:id="@+id/alienAlert" android:layout_height="wrap_content" android:checked="true"></CheckBox>

        <TextView android:text="@string/choose_player" android:id="@+id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
        <RadioGroup
        android:id="@+id/radioPlayerIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
 
	        <RadioButton
	            android:id="@+id/radio1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/player_avatar_1" 
	            android:drawableRight="@drawable/ic_pl_gandalf" />
	 
	        <RadioButton
	            android:id="@+id/radio2"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/player_avatar_2"
	            android:drawableRight="@drawable/ic_pl_gladiator" />
	        
	        <RadioButton
	            android:id="@+id/radio3"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/player_avatar_3"
	            android:drawableRight="@drawable/ic_pl_hunter_bow_arrow" />
	       
	        
	        <RadioButton
	            android:id="@+id/radio4"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/player_avatar_4"
	            android:drawableRight="@drawable/ic_pl_vader" />
	        
	        <RadioButton
	            android:id="@+id/radio5"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/player_avatar_5"
	            android:drawableRight="@drawable/ic_pl_girl_bow_arrow" />
	        
	        <RadioButton
	            android:id="@+id/radio6"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/player_avatar_6"
	            android:drawableRight="@drawable/ic_pl_girl_knife" />
	 
	         
	        <RadioButton
	            android:id="@+id/radio7"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/player_avatar_7"
	            android:drawableRight="@drawable/ic_pl_girl_knight" />
	    </RadioGroup>
        
</LinearLayout>